kubernetes/nginx.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ms-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-nginx
  template:
    metadata:
      labels:
        app: ms-nginx
    spec:
      containers:
        - image: rsobook/ms-nginx:2.0.4
          name: ms-nginx
          ports:
          - containerPort: 5432
            protocol: TCP
