kubernetes/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-nginx
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ms-nginx
